--- a/chat/index.html
+++ b/chat/index.html
@@ -46,5 +46,6 @@
                   <button type="submit" class="sendBtn">Send</button>
             </form>
       </div>
+      <div></div>
 </body>
 </html
