--- a/nodeServer/public/index.html
+++ b/nodeServer/public/index.html
@@ -14,7 +14,7 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   </body>
 </head>
 
@@ -22,7 +22,7 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"> <img src="logo.webp" alt="Bootstrap" width="40" height="40"
+      <a class="navbar-brand" href="#"> <img src="Images/logo.webp" alt="Bootstrap" width="40" height="40"
           style="border-radius: 10px;"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,9 +44,9 @@
               Language
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/IDE/cpp.html" target="_blank" id="cpp" >C++</a></li>
-              <li><a class="dropdown-item" href="/IDE/c.html" target="_blank" id="c">C</a></li>
-              <li><a class="dropdown-item" href="/IDE/python.html" target="_blank" id="python">Python</a></li>
+              <li><a class="dropdown-item" href="IDE/cpp.html" target="_blank" id="cpp" >C++</a></li>
+              <li><a class="dropdown-item" href="IDE/c.html" target="_blank" id="c">C</a></li>
+              <li><a class="dropdown-item" href="IDE/python.html" target="_blank" id="python">Python</a></li>
             </ul>
           </li>
         </ul>
@@ -73,6 +73,7 @@
   <script src="https://cdn.socket.io/4.6.0/socket.io.min.js" integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+" crossorigin="anonymous"></script>
 
   <script src="js/client.js"></script>
+
   <script src="js/language.js"></script>
 </body>
 
