--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   
 
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
   </body>
 </head>
 
@@ -20,7 +20,7 @@
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"> <img src="Images/logo.webp" alt="Bootstrap" width="40" height="40"
+      <a class="navbar-brand" href="#"> <img src="/Images/logo.webp" alt="Bootstrap" width="40" height="40"
           style="border-radius: 10px;"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,9 +42,9 @@
               Language
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="IDE/cpp.html" target="_blank" id="cpp" >C++</a></li>
-              <li><a class="dropdown-item" href="IDE/c.html" target="_blank" id="c">C</a></li>
-              <li><a class="dropdown-item" href="IDE/python.html" target="_blank" id="python">Python</a></li>
+              <li><a class="dropdown-item" href="/IDE/cpp.html" target="_blank" id="cpp" >C++</a></li>
+              <li><a class="dropdown-item" href="/IDE/c.html" target="_blank" id="c">C</a></li>
+              <li><a class="dropdown-item" href="/IDE/python.html" target="_blank" id="python">Python</a></li>
             </ul>
           </li>
         </ul>
@@ -74,9 +74,9 @@
   integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
   crossorigin="anonymous"></script>
   
-  <script src="js/client.js"></script>
+  <script src="/js/client.js"></script>
 
-  <script src="js/language.js"></script>
+  <script src="/js/language.js"></script>
 </body>
 
 </html>
