--- a/firstPage.html
+++ b/firstPage.html
@@ -4,15 +4,13 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Document</title>
-      <style>
-            a{
-                font-size: 40px;
-            }
-              </style>
+      <link rel="stylesheet" type="text/css" href="/css/firstPage.css">
 </head>
 <body>
-      <a href="/Login/registration.html">Register</a>
-      <br>
-      <a href="/Login/login.html">Login</a>
+      <div class="container">
+            <a class="link" href="/Login/registration.html">Register</a>
+            
+            <a class="link" href="/Login/login.html">Login</a>
+      </div>
 </body>
 </html>
