--- a/public/Login/login.html
+++ b/public/Login/login.html
@@ -18,7 +18,7 @@
 	<div class="container">
 
 		<form action="/login" method="POST">
-			<fieldset>
+			<!-- <fieldset> -->
 				<div class="container-inside">
 					<label>Email ID</label>
 					<input type="email" class="inputField" id='email' name="email" placeholder="abc@example.com" required>
@@ -31,7 +31,7 @@
 					<button type="reset" class="buttons">Reset</button>
 					<button type="submit" class="buttons">Submit</button>
 				<div>
-			</fieldset>
+			<!-- </fieldset> -->
 		</form>
 
 		<a id="mylink" href="./registration.html">register</a>
