--- a/public/Login/registration.html
+++ b/public/Login/registration.html
@@ -16,7 +16,7 @@
 
 	<div class="container">
 		<form action="/register" method="POST">
-			<fieldset>
+			<!-- <fieldset> -->
 
 				<div class="container-inside">
 					<label>Username</label>
@@ -38,7 +38,7 @@
 					<button type="submit" class="buttons">Submit</button>
 				</div>
 
-			</fieldset>
+			<!-- </fieldset> -->
 		</form>
 		<!-- <br><br> -->
 		<a id="mylink" href="./login.html">login</a>
