--- a/public/Login/login.html
+++ b/public/Login/login.html
@@ -26,7 +26,7 @@
 
 					<label>Password</label>
 					<input type="password" class="inputField" id="password" name="password" required>
-			      <div>
+			      </div>
 				<div class="buttonsDiv">
 					<button type="reset" class="buttons">Reset</button>
 					<button type="submit" class="buttons">Submit</button>
